[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu_bg.png" type="Texture" id=2]
[ext_resource path="res://UI/MainScreen/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/MainScreen/MainScreen.gd" type="Script" id=4]
[ext_resource path="res://UI/cursor/cursor.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 1 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Label" type="Label" parent="."]
margin_left = 150.0
margin_top = 160.0
margin_right = 799.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "Mana Storm"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 150.0
margin_top = 370.0
margin_right = 450.0
margin_bottom = 588.0

[node name="StartButton" parent="VBoxContainer" instance=ExtResource( 3 )]

[node name="OptionButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 74.0
margin_bottom = 144.0

[node name="Label" parent="VBoxContainer/OptionButton" index="0"]
text = "Option"

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 148.0
margin_bottom = 218.0

[node name="Label" parent="VBoxContainer/ExitButton" index="0"]
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
mix_target = 2

[node name="Cursor" parent="." instance=ExtResource( 5 )]

[connection signal="button_up" from="VBoxContainer/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_button_up"]

[editable path="VBoxContainer/OptionButton"]
[editable path="VBoxContainer/ExitButton"]
